--- a/server/package.json
+++ b/server/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cas-authentication": "^0.0.8",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "firebase": "^9.23.0",
     "pg": "^8.10.0"
   }
