--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "firebase": "^9.23.0",
+    "firebase-admin": "^11.10.1",
+    "jsonwebtoken": "^9.0.1",
     "pg": "^8.10.0"
   }
 }
