--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "cas-authentication": "^0.0.8",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-openid-connect": "^2.16.0",
     "express-session": "^1.17.3",
     "firebase": "^9.23.0",
     "firebase-admin": "^11.10.1",
